Fixed some of the arbitrage table problems in the UI
